--- a/url-shorten-backend/composer.json
+++ b/url-shorten-backend/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2",
         "ariaieboy/laravel-safe-browsing": "^1.0",
         "ashallendesign/short-url": "^7.0",
+        "flugger/laravel-responder": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
